@@ -1,3 +1,12 @@
+2009-08-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Get rid of Automake's "maintainer mode".
+
+	* configure.ac,
+	* Makefile.am,
+	* tools/bin/Makefile.am: Do not use MAINTAINER_MODE. (Be optimistic
+	about the behavior of `missing' when `help2man' does not exist.)
+
 2009-08-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Improve MT Alpha code generation.
